--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,12 +1,13 @@
 .page__content {
   background-color: #000;
-  max-width: 1280px;
+  max-width: 100%;
   min-width: 320px;
   margin: 0;
   padding: 0;
   color: #fff;
   font-family: "Inter", Arial, sans-serif;
   height: 100%;
+  justify-items: center;
 }
 
 .page__popup {
